# rofl-common

./: .clang-format  .gitignore  .travis.yml  CHANGES  Makefile.am  README  VERSION  autogen.sh  configure.ac
examples/ethswctld/: Makefile.am  cdaemon.cc  cdaemon.h  cetherswitch.cc  cetherswitch.h  cfibentry.cc  cfibentry.h  cfibtable.cc  cfibtable.h  cflowentry.cc  cflowentry.h  cflowtable.cc  cflowtable.h  cunixenv.cc  cunixenv.h  ethswctld.cc
src/rofl/: Makefile.am  rofl_common.pc.in
src/rofl/common/: Makefile.am  caddress.cc  caddress.h  caddrinfo.cc  caddrinfo.h  caddrinfos.cc  caddrinfos.h  callbacks.hpp  cauxid.h  cbuffer.cpp  cbuffer.hpp  cclock.cc  cclock.h  cctlid.h  cdpid.h  cdptid.h  cindex.h  ciosrv.cc  ciosrv.h  cjournal.cpp  cjournal.hpp  cjrnentry.hpp  cmemory.cc  cmemory.h  cpacket.cc  cpacket.h  cpipe.h  crandom.cc  crandom.h  crofbase.cc  crofbase.h  crofchan.cc  crofchan.h  crofconn.cc  crofconn.h  crofcore.cc  crofcore.h  crofctl.cc  crofctl.h  crofdpt.cc  (+39 more)
src/rofl/common/openflow/: Makefile.am  cofaction.cc  cofaction.h  cofactions.cc  cofactions.h  cofactionset.cc  cofaggrstats.cc  cofaggrstats.h  cofasyncconfig.cc  cofasyncconfig.h  cofbucket.cc  cofbucket.h  cofbucketcounter.cc  cofbucketcounter.h  cofbucketcounters.cc  cofbucketcounters.h  cofbuckets.cc  cofbuckets.h  cofdescstats.cc  cofdescstats.h  cofflowmod.cc  cofflowmod.h  cofflowstats.cc  cofflowstats.h  cofflowstatsarray.cc  cofflowstatsarray.h  cofgroupdescstats.cc  cofgroupdescstats.h  cofgroupdescstatsarray.cc  cofgroupdescstatsarray.h  cofgroupfeaturesstats.cc  cofgroupfeaturesstats.h  cofgroupmod.cc  cofgroupmod.h  cofgroupstats.cc  cofgroupstats.h  cofgroupstatsarray.cc  cofgroupstatsarray.h  cofhelloelem.cc  cofhelloelem.h  (+84 more)
src/rofl/common/openflow/extensions/: Makefile.am
src/rofl/common/openflow/messages/: Makefile.am  cofmsg.cc  cofmsg.h  cofmsg_aggr_stats.cc  cofmsg_aggr_stats.h  cofmsg_async_config.cc  cofmsg_async_config.h  cofmsg_barrier.cc  cofmsg_barrier.h  cofmsg_config.cc  cofmsg_config.h  cofmsg_desc_stats.cc  cofmsg_desc_stats.h  cofmsg_echo.cc  cofmsg_echo.h  cofmsg_error.cc  cofmsg_error.h  cofmsg_experimenter.cc  cofmsg_experimenter.h  cofmsg_experimenter_stats.cc  cofmsg_experimenter_stats.h  cofmsg_features.cc  cofmsg_features.h  cofmsg_flow_mod.cc  cofmsg_flow_mod.h  cofmsg_flow_removed.cc  cofmsg_flow_removed.h  cofmsg_flow_stats.cc  cofmsg_flow_stats.h  cofmsg_group_desc_stats.cc  cofmsg_group_desc_stats.h  cofmsg_group_features_stats.cc  cofmsg_group_features_stats.h  cofmsg_group_mod.cc  cofmsg_group_mod.h  cofmsg_group_stats.cc  cofmsg_group_stats.h  cofmsg_hello.cc  cofmsg_hello.h  cofmsg_meter_config_stats.cc  (+33 more)
src/rofl/common/protocols/: fipv6frame.cc  fipv6frame.h
src/rofl/platform/: Makefile.am
test/rofl/common/: Makefile.am  csegmsg_test.cc  csocket_test.cc  csocket_test.h  cworkflow_test.cc  cworkflow_test.h
test/rofl/common/all/: Makefile.am  cofmeterconfigarray_test.cc  coftables_test.cc  coxmatch_test.cc  coxmatch_test.h  coxmatches_test.cc
test/rofl/common/caddress/: Makefile.am  caddress_test.cc  caddress_test.h
test/rofl/common/caddrinfo/: Makefile.am  caddrinfo_test.cc  caddrinfo_test.h
test/rofl/common/caddrinfos/: Makefile.am  caddrinfos_test.cc  caddrinfos_test.h
test/rofl/common/cpacket/: Makefile.am  cpacket_test.cc  cpacket_test.h
test/rofl/common/crofbase/: Makefile.am  crofbasetest.cpp  crofbasetest.hpp  unittest.cpp
test/rofl/common/crofchan/: Makefile.am  crofchantest.cpp  crofchantest.hpp
test/rofl/common/crofconn/: Makefile.am  crofconntest.cpp  crofconntest.hpp
test/rofl/common/crofqueue/: Makefile.am  crofqueuetest.cpp  crofqueuetest.hpp
test/rofl/common/crofsock/: Makefile.am  crofsocktest.cpp  crofsocktest.hpp  unittest.cpp
test/rofl/common/csegmsg/: Makefile.am  csegmsg_test.cc  csegmsg_test.h
test/rofl/common/csockaddr/: Makefile.am  csockaddr_test.cc  csockaddr_test.h
test/rofl/common/cthread/: Makefile.am  cthread_test.cc  cthread_test.h
test/rofl/common/openflow/: Makefile.am  cofflowstatsarray_test.cc  cofgroupmod_test.cc  coxmatch_test.cc  coxmatches_test.cc
test/rofl/common/openflow/cofaction/: Makefile.am  cofaction_test.cc  cofaction_test.h
test/rofl/common/openflow/cofactions/: Makefile.am  cofactions_test.cc  cofactions_test.h
test/rofl/common/openflow/cofasyncconfig/: Makefile.am  cofasyncconfig_test.cc  cofasyncconfig_test.h
test/rofl/common/openflow/cofbucketcounter/: Makefile.am  cofbucketcounter_test.cc  cofbucketcounter_test.h
test/rofl/common/openflow/cofbucketcounters/: Makefile.am  cofbucketcounters_test.cc  cofbucketcounters_test.h
test/rofl/common/openflow/cofflowmod/: Makefile.am  cofflowmod_test.cc  cofflowmod_test.h
test/rofl/common/openflow/cofflowstatsarray/: Makefile.am  cofflowstatsarray_test.cc  cofflowstatsarray_test.h
test/rofl/common/openflow/cofgroupdescstatsarray/: Makefile.am  cofgroupdescstatsarray_test.cc  cofgroupdescstatsarray_test.h
test/rofl/common/openflow/cofgroupmod/: Makefile.am  cofgroupmod_test.cc  cofgroupmod_test.h
test/rofl/common/openflow/cofgroupstatsarray/: Makefile.am  cofgroupstatsarray_test.cc  cofgroupstatsarray_test.h
test/rofl/common/openflow/cofhelloelemversionbitmap/: Makefile.am  cofhelloelemversionbitmaptest.cc  cofhelloelemversionbitmaptest.h
test/rofl/common/openflow/cofinstruction/: Makefile.am  cofinstruction_test.cc  cofinstruction_test.h
test/rofl/common/openflow/cofmeterband/: Makefile.am  cofmeterband_test.cc  cofmeterband_test.h
test/rofl/common/openflow/cofmeterbands/: Makefile.am  cofmeterbands_test.cc  cofmeterbands_test.h
test/rofl/common/openflow/cofmeterbandstats/: Makefile.am  cofmeterbandstats_test.cc  cofmeterbandstats_test.h
test/rofl/common/openflow/cofmeterbandstatsarray/: Makefile.am  cofmeterbandstatsarray_test.cc  cofmeterbandstatsarray_test.h
test/rofl/common/openflow/cofmeterconfig/: Makefile.am  cofmeterconfig_test.cc  cofmeterconfig_test.h
test/rofl/common/openflow/cofmeterconfigarray/: Makefile.am  cofmeterconfigarray_test.cc  (+1 more)
test/rofl/common/protocols/: Makefile.am
(+2631 files in other folders)
