MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = messages experimental extensions

noinst_LTLIBRARIES = libopenflow.la

libopenflow_la_SOURCES= \
	openflow.h \
	openflow.cc \
	openflow10.h  \
	openflow12.h \
	openflow13.h \
	openflow14.h \
	openflow_common.h \
	openflow_experimental.h \
	openflow_rofl_exceptions.h \
	cofaction.h \
	cofaction.cc \
	cofactions.h \
	cofactions.cc \
	cofbucket.h \
	cofbucket.cc \
	cofbuckets.h \
	cofbuckets.cc \
	cofbucketcounter.h \
	cofbucketcounter.cc \
	cofbucketcounters.h \
	cofbucketcounters.cc \
	cofinstruction.h \
	cofinstruction.cc \
	cofinstructions.h \
	cofinstructions.cc \
	cofmatch.h \
	cofmatch.cc \
	coxmatch.h \
	coxmatch_output.h \
	coxmatch.cc \
	coxmatches.h \
	coxmatches.cc \
	cofport.h \
	cofport.cc \
	cofports.h \
	cofports.cc \
	cofportdescprop.h \
	cofportdescprop.cc \
	cofportdescprops.h \
	cofportdescprops.cc \
	cofdescstats.h \
	cofdescstats.cc \
	cofflowstatsarray.h \
	cofflowstatsarray.cc \
	cofflowstats.h \
	cofflowstats.cc \
	cofaggrstats.h \
	cofaggrstats.cc \
	coftablestats.h \
	coftablestats.cc \
	coftablestatsarray.h \
	coftablestatsarray.cc \
	cofportstats.h \
	cofportstats.cc \
	cofportstatsarray.h \
	cofportstatsarray.cc \
	cofqueuestats.h \
	cofqueuestats.cc \
	cofqueuestatsarray.h \
	cofqueuestatsarray.cc \
	cofgroupstats.h \
	cofgroupstats.cc \
	cofgroupstatsarray.h \
	cofgroupstatsarray.cc \
	cofgroupdescstats.h \
	cofgroupdescstats.cc \
	cofgroupdescstatsarray.h \
	cofgroupdescstatsarray.cc \
	cofgroupfeaturesstats.h \
	cofgroupfeaturesstats.cc \
	cofqueueprop.h \
	cofqueueprop.cc \
	cofqueueprops.h \
	cofqueueprops.cc \
	cofpacketqueue.h \
	cofpacketqueue.cc \
	cofpacketqueues.h \
	cofpacketqueues.cc \
	cofmeterband.h \
	cofmeterband.cc \
	cofmeterbands.h \
	cofmeterbands.cc \
	cofhelloelem.h \
	cofhelloelem.cc \
	cofhelloelemversionbitmap.h \
	cofhelloelemversionbitmap.cc \
	cofhelloelems.h \
	cofhelloelems.cc \
	cofflowmod.h \
	cofflowmod.cc \
	cofgroupmod.h \
	cofgroupmod.cc \
	coftablefeatureprop.h \
	coftablefeatureprop.cc \
	coftablefeatureprops.h \
	coftablefeatureprops.cc \
	coftablefeatures.h \
	coftablefeatures.cc \
	coftables.h \
	coftables.cc \
	coftablemodprop.h \
	coftablemodprop.cc \
	coftablemodprops.h \
	coftablemodprops.cc \
	cofasyncconfig.h \
	cofasyncconfig.cc \
	cofrole.h \
	cofrole.cc \
	cofmeterbandstats.h \
	cofmeterbandstats.cc \
	cofmeterbandstatsarray.h \
	cofmeterbandstatsarray.cc \
	cofmeterstats.h \
	cofmeterstats.cc \
	cofmeterstatsarray.h \
	cofmeterstatsarray.cc \
	cofmeterconfig.h \
	cofmeterconfig.cc \
	cofmeterconfigarray.h \
	cofmeterconfigarray.cc \
	cofmeterfeatures.h \
	cofmeterfeatures.cc 

libopenflow_la_LIBADD=messages/libopenflow_messages.la experimental/libopenflow_experimental.la extensions/libopenflow_extensions.la

library_includedir=$(includedir)/rofl/common/openflow
library_include_HEADERS = \
	openflow.h \
	openflow10.h  \
	openflow12.h \
	openflow13.h \
	openflow14.h \
	openflow_common.h \
	openflow_experimental.h \
	openflow_rofl_exceptions.h \
	cofaction.h \
	cofactions.h \
	cofbucket.h \
	cofbuckets.h \
	cofbucketcounter.h \
	cofbucketcounters.h \
	cofinstruction.h \
	cofinstructions.h \
	cofmatch.h \
	coxmatch.h \
	coxmatch_output.h \
	coxmatches.h \
	cofport.h \
	cofports.h \
	cofportdescprop.h \
	cofportdescprops.h \
	cofdescstats.h \
	cofflowstatsarray.h \
	cofflowstats.h \
	cofaggrstats.h \
	coftablestats.h \
	coftablestatsarray.h \
	cofportstats.h \
	cofportstatsarray.h \
	cofqueuestats.h \
	cofqueuestatsarray.h \
	cofgroupstats.h \
	cofgroupstatsarray.h \
	cofgroupdescstats.h \
	cofgroupdescstatsarray.h \
	cofgroupfeaturesstats.h \
	cofqueueprop.h \
	cofqueueprops.h \
	cofpacketqueue.h \
	cofpacketqueues.h \
	cofmeterband.h \
	cofmeterbands.h \
	cofhelloelem.h \
	cofhelloelemversionbitmap.h \
	cofhelloelems.h \
	cofflowmod.h \
	cofgroupmod.h \
	coftablefeatureprop.h \
	coftablefeatureprops.h \
	coftablefeatures.h \
	coftables.h \
	coftablemodprop.h \
	coftablemodprops.h \
	cofasyncconfig.h \
	cofrole.h \
	cofmeterbandstats.h \
	cofmeterbandstatsarray.h \
	cofmeterstats.h \
	cofmeterstatsarray.h \
	cofmeterconfig.h \
	cofmeterconfigarray.h \
	cofmeterfeatures.h



