MAINTAINERCLEANFILES = Makefile.in

#Subdirs; place '.' before any directory to force the current directory to
#be compiled before the subdirs.
SUBDIRS = \
	cofaction \
	cofactions \
	cofasyncconfig \
	cofbucketcounter \
	cofbucketcounters \
	cofflowmod \
	cofflowstatsarray \
	cofinstruction \
	cofgroupdescstatsarray \
	cofgroupmod \
	cofgroupstatsarray \
	cofhelloelemversionbitmap \
	cofqueuestatsarray \
	coxmatch \
	coxmatches \
	exceptions \
	messages

