MAINTAINERCLEANFILES = Makefile.in

#Subdirs; place '.' before any directory to force the current directory to
#be compiled before the subdirs.
SUBDIRS = \
	cofaction \
	cofactions \
	cofasyncconfig \
	cofbucketcounter \
	cofbucketcounters \
	cofflowmod \
	cofflowstatsarray \
	cofinstruction \
	cofgroupdescstatsarray \
	cofgroupmod \
	cofgroupstatsarray \
	cofhelloelemversionbitmap \
	cofmeterband \
	cofmeterbands \
	cofmeterbandstats \
	cofmeterbandstatsarray \
	cofmeterconfig \
	cofmeterconfigarray \
	cofmeterfeatures \
	cofmeterstats \
	cofmeterstatsarray \
	cofqueueprop \
	cofqueueprops \
	cofqueuestatsarray \
	cofpacketqueue \
	cofpacketqueues \
	cofportstatsarray \
	cofrole \
	coftablefeatureprop \
	coftablefeatureprops \
	coftablefeatures \
	coftablestatsarray \
	coftables \
	coxmatch \
	coxmatches \
	exceptions \
	messages

