MAINTAINERCLEANFILES = Makefile.in

#Subdirs; place '.' before any directory to force the current directory to
#be compiled before the subdirs.
SUBDIRS = \
	cofmsgaggrstats \
	cofmsgdescstats \
	cofmsgexperimenterstats \
	cofmsgflowstats \
	cofmsggroupdescstats \
	cofmsggroupfeaturesstats \
	cofmsggroupstats \
	cofmsgmeterconfigstats \
	cofmsgmeterfeaturesstats \
	cofmsgmeterstats \
	cofmsgportdescstats \
	cofmsgportstats \
	cofmsgqueuestats \
	cofmsgtablefeaturesstats \
	cofmsgtablestats \
	cofmsgasyncconfig \
	cofmsgbarrier \
	cofmsgconfig \
	cofmsgecho \
	cofmsgerror \
	cofmsgexperimenter \
	cofmsgfeatures \
	cofmsgflowmod \
	cofmsgflowremoved \
	cofmsggroupmod \
	cofmsghello \
	cofmsgmetermod \
	cofmsgpacketin \
	cofmsgpacketout \
	cofmsgportmod \
	cofmsgportstatus \
	cofmsgqueueconfig

