MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libopenflow_experimental_actions.la
libopenflow_experimental_actions_la_SOURCES = \
	ext320_actions.h \
	ext320_actions.cc \
	gtp_actions.h \
	gtp_actions.cc \
	pppoe_actions.h \
	pppoe_actions.cc \
	capwap_actions.h \
	capwap_actions.cc \
	wlan_actions.h \
	wlan_actions.cc \
	gre_actions.h \
	gre_actions.cc

library_includedir=$(includedir)/rofl/common/openflow/experimental/actions
library_include_HEADERS = \
	ext320_actions.h \
	gtp_actions.h \
	pppoe_actions.h \
	capwap_actions.h \
	wlan_actions.h \
	gre_actions.h
